# RustCraft

./: .gitignore  Cargo.toml  README.md  makefile  rust-toolchain
GameEngine/: Cargo.toml
GameEngine/src/: TestFuncs.rs  lib.rs
GameEngine/tests/: test1.rs
RustCraft/: Cargo.toml
RustCraft/src/: main.rs
benches/: bench.rs  bench_fill_chunk_hashmap.rs  bench_test.rs  chunk_fill_chunk_hashmap.rs  fill_chunk_hashmap.rs  world_get_chunks_around_character.rs
src/: Block.rs  Camera.rs  Chunk.rs  FileSystem.rs  GPUData.rs  Kernels.rs  MainGameLoop.rs  Objects.rs  Renderer.rs  Settings.rs  WindowWrapper.rs  World.rs  block.rs  block_type.rs  calculate_frame.rs  camera.rs  character.rs  chunk_generation_thread.rs  file_system.rs  gpu_data.rs  lib.rs  main.rs  main_game_loop.rs  my_keyboard.rs  renderer.rs  settings.rs  types.rs  window_wrapper.rs  world.rs
src/Chunk/: ChunkFunctions.rs  CreateChunks.rs  chunk_functions.rs  chunk_gpu_function.rs  chunk_gpu_functions.rs  create_chunks.rs  mod.rs
src/GPUKernels/: OpenGLShaders.rs  PixelGradient.rs  PixelShift.rs  Raytrace.rs  mod.rs
src/Shaders/: check_air_compute.wgsl  myFrag.wgsl  myVert.wgsl  vertex.wgsl
src/optimisations/: chunk_fill_chunk_hashmap.rs  mod.rs  opt_fill_chunk_hashmap.rs  world_get_chunks_around_character.rs
tests/: TestChunks.rs  chunk_basic_functions.rs  chunk_create_temp_chunk_vector.rs  chunk_fill_chunk_hashmap.rs  test1.rs  test_check_air.rs  test_chunks.rs  test_fill_chunk_hashmap.rs  world_get_chunks_around_character.rs
