[package]
name = "rust_craft"
version = "0.1.1"
edition = "2021"

[features]
shipping = []

[profile.release]
debug = false

[dependencies]
async-std = "1.12.0"
bytemuck = { version = "1.14.1", features = ["derive"] }
flume = "0.11.0"
nalgebra = "0.32.3"
rand = "0.8.5"
wgpu = "0.19.1"
winit = "0.29.10"
